@@ -172,7 +172,6 @@ UUID::FFI                                      = 0.07
 Wasm                                           = 0.09
 Wasm::Hook                                     = 0.02
 WebService::DailyConnect                       = 0.02
-WebService::LiveJournal                        = 0.08
 Win32::ErrorMode                               = 0.06
 Win32::Getppid                                 = 0.05
 Win32::Process::Info                           = 1.022
